--- a/TheDialgaTeam.Core.Logger/src/TheDialgaTeam.Core.Logger.csproj
+++ b/TheDialgaTeam.Core.Logger/src/TheDialgaTeam.Core.Logger.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>TheDialgaTeam.Core.Logger</AssemblyName>
     <RootNamespace>TheDialgaTeam.Core.Logger</RootNamespace>
-    <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
     <PackageId>TheDialgaTeam.Core.Logger</PackageId>
     <Version>0.0.1.0</Version>
@@ -14,6 +14,7 @@
     <PackageProjectUrl>https://github.com/TheDialgaTeam/TheDialgaTeam.Core.Logger</PackageProjectUrl>
     <RepositoryUrl>https://github.com/TheDialgaTeam/TheDialgaTeam.Core.Logger</RepositoryUrl>
     <Platforms>AnyCPU;x64;x86</Platforms>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -29,9 +30,6 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog" Version="2.9.0" />
-    <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
