--- a/YouTubePlays.Discord.Bot/src/YouTubePlays.Discord.Bot.csproj
+++ b/YouTubePlays.Discord.Bot/src/YouTubePlays.Discord.Bot.csproj
@@ -20,8 +20,8 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net.Commands" Version="2.2.0" />
     <PackageReference Include="Discord.Net.WebSocket" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
-    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
