Shift single responsibility model.

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+/YouTubePlays.Discord.Bot/src/appsettings.Development.json
