--- a/YouTubePlays.Discord.Bot/src/YouTubePlays.Discord.Bot.csproj
+++ b/YouTubePlays.Discord.Bot/src/YouTubePlays.Discord.Bot.csproj
@@ -48,6 +48,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
